Fixed color picker font align

--- a/src/utils/style.module.css
+++ b/src/utils/style.module.css
@@ -63,6 +63,7 @@
 .colorPickerSwatch {
   width: 100%;
   height: 2em;
+  line-height: 2em;
   cursor: pointer;
   text-align: center;
   font-size: 1em;
